--- a/style.css
+++ b/style.css
@@ -1,4 +1,44 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
+    margin: 0;
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    padding: 16px;
+    margin-bottom: 40px;
+}
+
+.dark-background {
+    background-color: #1f2937;
+    color: #f9faf8;
+}
+
+.no-underline {
+    text-decoration: none;
+}
+
+.main-link {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.nav-bar {
+    display: flex;
+    gap: 16px;
+}
+
+.no-bullets {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-link {
+    font-size: 18px;
+    color: #e5e7eb;
 }
