--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     justify-content: center;
     padding: 40px;
     gap: 40px;
-    margin: 16px 40px;
+    margin: 80px;
 }
 
 .title-description {
