--- a/style.css
+++ b/style.css
@@ -149,3 +149,38 @@ body {
     margin: 0;
     padding: 0 16px;
 }
+
+.call-to-action-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 160px 320px;
+    padding: 80px 160px;
+    border-radius: 8px;
+}
+
+.blue-background {
+    background-color: #3882f6;
+    color: #f9faf8;
+}
+
+.action-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.action-title {
+    font-weight: bold;
+    font-size: large;
+}
+
+.action-description {
+    font-weight: lighter;
+    font-size: small;
+    margin: 0;
+    padding: 0;
+}
+
+.call-to-action-section .sign-up-button {
+    border: 2px solid white;
+}
