--- a/style.css
+++ b/style.css
@@ -140,6 +140,8 @@ body {
     font-style: italic;
     font-weight: lighter;
     color: #1f2937;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .quote-person {
