--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
     padding: 40px;
     gap: 40px;
     margin: 120px;
+    flex-wrap: wrap;
 }
 
 .title-description {
@@ -103,6 +104,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 72px;
+    flex-wrap: wrap;
 }
 
 .info-combo {
@@ -159,6 +161,7 @@ body {
     margin: 120px 320px;
     padding: 60px 160px;
     border-radius: 8px;
+    flex-wrap: wrap;
 }
 
 .blue-background {
